use gomplate instead of envsubst for php/nginx/varnish containers

--- a/images/nginx/1.17/Dockerfile
+++ b/images/nginx/1.17/Dockerfile
@@ -1,14 +1,9 @@
 FROM nginx:1.17-alpine
 
-COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
+COPY --from=hairyhenderson/gomplate:slim /gomplate /usr/local/bin/gomplate
 
 RUN set -eux \
-  && apk add --no-cache bash shadow \
-  && apk add --no-cache --virtual .build-deps curl \
-#  && curl -fsSLo /usr/local/bin/envsubst \
-#     "https://github.com/a8m/envsubst/releases/download/v1.2.0/envsubst-`uname -s`-`uname -m`" \
-#  && chmod +x /usr/local/bin/envsubst \
-  && apk del --no-cache .build-deps
+  && apk add --no-cache bash shadow
 
 ENV NGINX_UPSTREAM_HOST           php-fpm
 ENV NGINX_UPSTREAM_PORT           9000
@@ -23,7 +18,7 @@ ENV XDEBUG_CONNECT_BACK_HOST      '""'
 
 COPY ./etc/. /etc/
 
-CMD find /etc/nginx -name '*.template' -exec sh -c 'envsubst <${1} >${1%.*}' sh {} \; \
+CMD find /etc/nginx -name '*.template' -exec sh -c 'gomplate <${1} >${1%.*}' sh {} \; \
   && nginx -g "daemon off;"
 
 WORKDIR /var/www/html
