--- a/images/nginx/context/etc/nginx/fastcgi_params.template
+++ b/images/nginx/context/etc/nginx/fastcgi_params.template
@@ -25,7 +25,7 @@ fastcgi_param  SERVER_NAME        $server_name;
 fastcgi_param  REDIRECT_STATUS    200;
 
 # Xdebug remote connect back support for Docker Desktop
-fastcgi_param  HTTP_X_DEBUG_HOST  ${XDEBUG_CONNECT_BACK_HOST};
+fastcgi_param  HTTP_X_DEBUG_HOST  {{ .Env.XDEBUG_CONNECT_BACK_HOST }};
 
 fastcgi_buffers 1024 4k;
 fastcgi_buffer_size 128k;
