--- a/images/php/centos7/cli/Dockerfile
+++ b/images/php/centos7/cli/Dockerfile
@@ -10,7 +10,7 @@ ENV COMPOSER_HOME               /tmp/composer
 
 COPY --from=composer:1 /usr/bin/composer /usr/bin/composer1
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer2
-COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
+COPY --from=hairyhenderson/gomplate:slim /gomplate /usr/local/bin/gomplate
 
 RUN set -eux \
   && yum install -y epel-release \
@@ -32,7 +32,7 @@ RUN set -eux \
 RUN set -eux \
   && yum install -y https://rpms.remirepo.net/enterprise/remi-release-7.rpm \
   && PHP_VERSION_STRIPPED=$(echo ${PHP_VERSION} | awk -F '.' '{print $1$2}') \
-  && yum-config-manager --enable remi-php${PHP_VERSION} \
+  && yum-config-manager --enable remi-php${PHP_VERSION_STRIPPED} \
   && PHP_PACKAGES= && for PKG in ${PHP_EXTENSIONS}; do \
        if [ "${PKG}" = "mcrypt" ] && [ "${PHP_VERSION_STRIPPED}" -gt 71 ]; then continue; fi; \
        if [ "${PKG}" = "sodium" ] && [ "${PHP_VERSION_STRIPPED}" -lt 72 ]; then continue; fi; \
