--- a/images/php-fpm/centos8/_base/Dockerfile
+++ b/images/php-fpm/centos8/_base/Dockerfile
@@ -42,8 +42,7 @@ RUN set -eux \
      https://github.com/mailhog/mhsendmail/releases/latest/download/mhsendmail_linux_amd64 \
   && chmod +x /usr/local/bin/mhsendmail \
   && pip3 install --upgrade pip \
-  && pip3 install awscli --no-cache-dir \
-  && envsubst < /etc/php.d/opcache.ini.template > /etc/php.d/10-opcache.ini
+  && pip3 install awscli --no-cache-dir
 
 ENV NODE_VERSION    10
 
