--- a/images/php-fpm/context/magento2-web/etc/nginx/conf.d/default.conf.template
+++ b/images/php-fpm/context/magento2-web/etc/nginx/conf.d/default.conf.template
@@ -4,13 +4,13 @@ resolver 127.0.0.11;
 # Select upstream backend to use based on presence of Xdebug cookies and Blackfire headers
 map "$http_X_BLACKFIRE_QUERY:$cookie_XDEBUG_SESSION$cookie_XDEBUG_PROFILE$cookie_XDEBUG_TRACE" $fastcgi_backend {
     # Nothing for debug and nothing for blackfire means its a pure request
-    ":" ${NGINX_UPSTREAM_HOST}:${NGINX_UPSTREAM_PORT};
+    ":" {{ .Env.NGINX_UPSTREAM_HOST }}:{{ .Env.NGINX_UPSTREAM_PORT }};
 
     # Use blackfire if the blackfire query is specified AND no debug cookie is set
-    "~:$" ${NGINX_UPSTREAM_BLACKFIRE_HOST}:${NGINX_UPSTREAM_BLACKFIRE_PORT};
+    "~:$" {{ .Env.NGINX_UPSTREAM_BLACKFIRE_HOST }}:{{ .Env.NGINX_UPSTREAM_BLACKFIRE_PORT }};
 
     # In all other cases, a debug cookie will be present; use debug container
-    default ${NGINX_UPSTREAM_DEBUG_HOST}:${NGINX_UPSTREAM_DEBUG_PORT};
+    default {{ .Env.NGINX_UPSTREAM_DEBUG_HOST }}:{{ .Env.NGINX_UPSTREAM_DEBUG_PORT }};
 }
 
 map $http_host $MAGE_RUN_CODE {
@@ -25,13 +25,13 @@ include /etc/nginx/snippets/http-*.conf;
 server {
     listen 80;
 
-    root ${NGINX_ROOT}${NGINX_PUBLIC};
-    set $MAGE_ROOT ${NGINX_ROOT};
+    root {{ .Env.NGINX_ROOT }}{{ .Env.NGINX_PUBLIC }};
+    set $MAGE_ROOT {{ .Env.NGINX_ROOT }};
 
     index index.html index.php;
     autoindex off;
     charset UTF-8;
 
     include /etc/nginx/snippets/server-*.conf;
-    include /etc/nginx/available.d/${NGINX_TEMPLATE};
+    include /etc/nginx/available.d/{{ .Env.NGINX_TEMPLATE }};
 }
