--- a/images/php-fpm/context/magento2-web/etc/supervisor/available.d/socat.conf.template
+++ b/images/php-fpm/context/magento2-web/etc/supervisor/available.d/socat.conf.template
@@ -1,5 +1,5 @@
 [program:socat]
-command=/bin/sh -c "[ -e /run/host-services/ssh-auth.sock ] && socat UNIX-CLIENT:/run/host-services/ssh-auth.sock UNIX-LISTEN:${SSH_AUTH_SOCK},fork,user=www-data,group=www-data"
+command=/bin/sh -c "[ -e /run/host-services/ssh-auth.sock ] && socat UNIX-CLIENT:/run/host-services/ssh-auth.sock UNIX-LISTEN:{{ .Env.SSH_AUTH_SOCK }},fork,user=www-data,group=www-data"
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/2
