add schemantic logging for varnish

--- a/images/varnish/context/etc/supervisor/conf.d/varnish.conf
+++ b/images/varnish/context/etc/supervisor/conf.d/varnish.conf
@@ -12,7 +12,7 @@ stderr_logfile=/dev/fd/1
 stderr_logfile_maxbytes=0
 
 [program:varnishncsa]
-command=varnishncsa -q 'ReqURL ne "/varnishcheck"' -F "[%%{x-forwarded-for}i] %%u %%t %%{Varnish:handling}x \"%%r\" %%s \"%%{VSL:RespReason}x\" %%b %%T \"%%{Referer}i\" \"%%{User-agent}i\""
+command=varnishncsa -q 'ReqURL ne "/varnishcheck"' -F '{"Timestamp": "%t", "Handling": "%{Varnish:handling}x", "Request": "%%r", "Status": %%s, "Response-Reason": "%%{VSL:RespReason}x", "Referer": "%%{Referer}i", "X-Forwarded-For": "%%{x-forwarded-for}i", "Remote-User": "%%u", "Bytes": %%b, "Time-To-Serve": %%D, "User-Agent": "%%{User-agent}i", "X-Magento-Tags": "%%{x-magento-tags}o"}'
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/1
