--- a/images/varnish/context/etc/supervisor/conf.d/varnish.conf
+++ b/images/varnish/context/etc/supervisor/conf.d/varnish.conf
@@ -11,8 +11,15 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/1
 stderr_logfile_maxbytes=0
 
-[program:varnishncsa]
-command=varnishncsa -q 'ReqURL ne "/varnishcheck"' -F '{"Timestamp": "%t", "Handling": "%{Varnish:handling}x", "Request": "%%r", "Status": %%s, "Response-Reason": "%%{VSL:RespReason}x", "Referer": "%%{Referer}i", "X-Forwarded-For": "%%{x-forwarded-for}i", "Remote-User": "%%u", "Bytes": %%b, "Time-To-Serve": %%D, "User-Agent": "%%{User-agent}i", "X-Magento-Tags": "%%{x-magento-tags}o"}'
+[program:varnishncsa-client]
+command=varnishncsa -q 'ReqURL ne "/varnishcheck"' -F '{"Timestamp": "%%t", "Varnish-Side": "%%{Varnish:side}x", "Age": %%{age}o, "Handling": "%%{Varnish:handling}x", "Request": "%%r", "Status": "%%s", "Response-Reason": "%%{VSL:RespReason}x", "Fetch-Error": "%%{VSL:FetchError}x", "X-Forwarded-For": "%%{x-forwarded-for}i", "Remote-User": "%%u", "Bytes": "%%b", "Time-To-Serve": %%D, "User-Agent": "%%{User-agent}i", "Referer": "%%{Referer}i", "X-Varnish":  "%%{x-varnish}o", "X-Magento-Tags":  "%%{x-magento-tags}o"}'
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/fd/1
+stderr_logfile_maxbytes=0
+
+[program:varnishncsa-backend]
+command=varnishncsa -b -F '{"Timestamp": "%%t", "Varnish-Side": "%%{Varnish:side}x", "Handling": "%%{Varnish:handling}x", "Request": "%%r", "Status": "%%s", "Response-Reason": "%%{VSL:RespReason}x", "Fetch-Error": "%%{VSL:FetchError}x", "Bytes": "%%b", "Time-To-Serve": %%D}'
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/1
