--- a/templates/environments/includes/nginx.base.yml
+++ b/templates/environments/includes/nginx.base.yml
@@ -15,7 +15,7 @@ services:
       - traefik.http.services.{{.reward_env_name}}-nginx.loadbalancer.server.port=80
     volumes:
       - .{{default "" .reward_web_root}}/:/var/www/html:cached
-      - ./{{default ".reward/nginx/" .nginx_custom_configs_path}}:/etc/nginx/snippets/
+      - ./{{default ".reward/nginx" .nginx_custom_configs_path}}:/etc/nginx/snippets/
     environment:
       - XDEBUG_CONNECT_BACK_HOST=${XDEBUG_CONNECT_BACK_HOST:-''}
 {{end}}
