update image build script

--- a/.github/workflows/docker-image-php.yml
+++ b/.github/workflows/docker-image-php.yml
@@ -10,6 +10,7 @@ on:
     - images/php-fpm/**
     branches:
     - main
+    - develop
 jobs:
   php:
     name: PHP ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
