--- a/.github/workflows/docker-image-php.yml
+++ b/.github/workflows/docker-image-php.yml
@@ -42,6 +42,7 @@ jobs:
           VARIANT_LIST: ${{ matrix.php_variants }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
   php-fpm:
     name: FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -71,6 +72,7 @@ jobs:
           PHP_VARIANT: ${{ matrix.php_variant }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
 
   magento1:
@@ -97,6 +99,7 @@ jobs:
           PHP_VERSION: ${{ matrix.php_version }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
 
   magento2:
@@ -123,6 +126,7 @@ jobs:
           PHP_VERSION: ${{ matrix.php_version }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
 
   magento2-web:
@@ -149,6 +153,7 @@ jobs:
           PHP_VERSION: ${{ matrix.php_version }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
 
   wordpress:
@@ -175,6 +180,7 @@ jobs:
           PHP_VERSION: ${{ matrix.php_version }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
 
   shopware:
@@ -194,4 +200,5 @@ jobs:
           PHP_VERSION: ${{ matrix.php_version }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
