--- a/.github/workflows/docker-image-node.yml
+++ b/.github/workflows/docker-image-node.yml
@@ -14,6 +14,8 @@ jobs:
   node:
     name: Node
     runs-on: ubuntu-latest
+    environment:
+      name: ${GITHUB_REF##*/}
     steps:
     - uses: actions/checkout@v1
     - run: ./images/scripts/build.sh "${BUILD_GROUP}"
