--- a/.github/workflows/dev-docker-image-node.yml
+++ b/.github/workflows/dev-docker-image-node.yml
@@ -8,20 +8,19 @@ on:
     - images/.trigger
     - images/node/**
     branches:
-    - main
     - develop
 jobs:
   node:
     name: Node
     runs-on: ubuntu-latest
     environment:
-      name: ${GITHUB_REF##*/}
+      name: develop
     steps:
     - uses: actions/checkout@v1
     - run: ./images/scripts/build.sh "${BUILD_GROUP}"
       env:
         BUILD_GROUP: node
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
+        DOCKER_USERNAME: ${{ secrets.DEV_DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DEV_DOCKER_PASSWORD }}
+        DOCKER_REPO: ${{ secrets.DEV_DOCKER_REPO }}
         PUSH: "true"
