--- a/.github/workflows/main-docker-image-magepack.yml
+++ b/.github/workflows/main-docker-image-magepack.yml
@@ -1,26 +1,23 @@
 ---
-name: Docker Image Elasticsearch
+name: Docker Image Magepack
 on:
   schedule:
   - cron: "0 6 1 * *"
   push:
     paths:
     - images/.trigger
-    - images/elasticsearch/**
+    - images/magepack/**
     branches:
     - main
-    - develop
 jobs:
-  elasticsearch:
-    name: Elasticsearch
+  magepack:
+    name: Magepack
     runs-on: ubuntu-latest
-    environment:
-      name: ${GITHUB_REF##*/}
     steps:
     - uses: actions/checkout@v1
     - run: ./images/scripts/build.sh "${BUILD_GROUP}"
       env:
-        BUILD_GROUP: elasticsearch
+        BUILD_GROUP: magepack
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
