--- a/.github/workflows/main-docker-image-mailhog.yml
+++ b/.github/workflows/main-docker-image-mailhog.yml
@@ -1,26 +1,23 @@
 ---
-name: Docker Image RabbitMQ
+name: Docker Image Mailhog
 on:
   schedule:
   - cron: "0 6 1 * *"
   push:
     paths:
     - images/.trigger
-    - images/rabbitmq/**
+    - images/mailhog/**
     branches:
     - main
-    - develop
 jobs:
-  rabbitmq:
-    name: RabbitMQ
+  mailhog:
+    name: Mailhog
     runs-on: ubuntu-latest
-    environment:
-      name: ${GITHUB_REF##*/}
     steps:
     - uses: actions/checkout@v1
     - run: ./images/scripts/build.sh "${BUILD_GROUP}"
       env:
-        BUILD_GROUP: rabbitmq
+        BUILD_GROUP: mailhog
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
