--- a/.github/workflows/main-docker-image-nginx.yml
+++ b/.github/workflows/main-docker-image-nginx.yml
@@ -1,26 +1,23 @@
 ---
-name: Docker Image Redis
+name: Docker Image Nginx
 on:
   schedule:
   - cron: "0 6 1 * *"
   push:
     paths:
     - images/.trigger
-    - images/redis/**
+    - images/nginx/**
     branches:
     - main
-    - develop
 jobs:
-  redis:
-    name: Redis
+  nginx:
+    name: Nginx
     runs-on: ubuntu-latest
-    environment:
-      name: ${GITHUB_REF##*/}
     steps:
     - uses: actions/checkout@v1
     - run: ./images/scripts/build.sh "${BUILD_GROUP}"
       env:
-        BUILD_GROUP: redis
+        BUILD_GROUP: nginx
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
