refactor ci actions structure

--- a/.github/workflows/main-docker-image-elasticsearch.yml
+++ b/.github/workflows/main-docker-image-elasticsearch.yml
@@ -8,7 +8,7 @@ on:
     - images/.trigger
     - images/elasticsearch/**
     branches:
-    - develop
+    - main
 jobs:
   elasticsearch:
     name: Elasticsearch
