--- a/images/varnish/context/etc/varnish/default.vcl.template
+++ b/images/varnish/context/etc/varnish/default.vcl.template
@@ -6,14 +6,22 @@ import dynamic;
 
 backend default {
     .host = "";
-    .port = "{{ .Env.BACKEND_PORT }}";
+    .port = "{{ getenv "BACKEND_PORT" "80" }}";
     .first_byte_timeout = 3600s;
     .between_bytes_timeout = 300s;
 }
 
-{{- if eq .Env.PROBE_DISABLED "true" }}
+{{- if eq (getenv "PROBE_DISABLED" "false") "true" }}
+#probe healthcheck {
+#    .url = "{{ getenv "PROBE_URL" "healthcheck.php" }}";
+#    .timeout = 2s;
+#    .interval = 5s;
+#    .window = 10;
+#    .threshold = 5;
+#}
+{{- else }}
 probe healthcheck {
-    .url = "{{ .Env.PROBE_URL }}";
+    .url = "{{ getenv "PROBE_URL" "healthcheck.php" }}";
     .timeout = 2s;
     .interval = 5s;
     .window = 10;
@@ -22,18 +30,20 @@ probe healthcheck {
 {{- end }}
 
 acl purge {
-    {{- range ( .Env.ACL_PURGE_HOST | strings.Split "," ) }}
+    {{- range ( getenv "ACL_PURGE_HOST" "0.0.0.0/0" | strings.Split "," ) }}
     "{{.}}";
     {{- end }}
 }
 
 sub vcl_init {
     new ddir = dynamic.director(
-        port = "{{ .Env.BACKEND_PORT }}",
+        port = "{{ getenv "BACKEND_PORT" "80" }}",
         first_byte_timeout = 20s,
         connect_timeout = 15s,
         between_bytes_timeout = 10s,
-        {{- if eq .Env.PROBE_DISABLED "true" }}
+        {{- if eq (getenv "PROBE_DISABLED" "false") "true" }}
+        #probe = healthcheck,
+        {{- else }}
         probe = healthcheck,
         {{- end }}
         ttl = 60s
@@ -47,7 +57,12 @@ sub vcl_recv {
     }
 
     # Configure Dynamic Director
-    set req.backend_hint = ddir.backend("{{ .Env.BACKEND_HOST }}");
+    set req.backend_hint = ddir.backend("{{ getenv "BACKEND_HOST" "nginx" }}");
+
+    # https://stackoverflow.com/questions/35345232/matching-last-non-private-ip-address-in-an-x-forwarded-for-header
+    if (! req.http.x-real-ip) {
+        set req.http.X-Real-IP = regsub(req.http.X-Forwarded-For, ".*\b(?!127\.|10\.|172\.1[6-9]\.|172\.2[0-9]\.|172\.3[0-1]\.|192\.168\.)(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}).*", "\1");
+    }
 
     if (req.method == "PURGE") {
         if (client.ip !~ purge) {
