--- a/.github/workflows/main-docker-image-php.yml
+++ b/.github/workflows/main-docker-image-php.yml
@@ -209,7 +209,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "centos7", "centos8", "debian" ]
-        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0" ]
         build_group: [ "debug" ]
         exclude:
           - docker_base_images: "centos8"
@@ -238,7 +238,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "centos7", "centos8", "debian" ]
-        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0" ]
         build_group: [ "blackfire" ]
         exclude:
           - docker_base_images: "centos8"
@@ -247,8 +247,6 @@ jobs:
             php_version: "7.0"
           - docker_base_images: "centos8"
             php_version: "7.1"
-          - docker_base_images: "debian"
-            php_version: "8.1"
     steps:
       - uses: actions/checkout@v1
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
