--- a/images/php-fpm/centos7/wordpress/context/debug/etc/php-cli.ini
+++ b/images/php-fpm/centos7/wordpress/context/debug/etc/php-cli.ini
@@ -1,3 +1,3 @@
 [php]
 xdebug.remote_autostart=on
-xdebug.remote_host=${XDEBUG_REMOTE_HOST}
+xdebug.remote_host={{ getenv "XDEBUG_REMOTE_HOST" "127.0.0.1" }}
