update some php defaults

--- a/templates/environments/includes/blackfire.base.yml
+++ b/templates/environments/includes/blackfire.base.yml
@@ -28,6 +28,7 @@ services:
       - SSH_AUTH_SOCK={{default "/tmp/ssh-auth.sock" .ssh_auth_sock_path_env}}
       - NODE_VERSION={{default "10" .node_version}}
       - COMPOSER_MEMORY_LIMIT=-1
+      - COMPOSER_PROCESS_TIMEOUT=3000
       - BLACKFIRE_CLIENT_ID={{.blackfire_client_id}}
       - BLACKFIRE_CLIENT_TOKEN={{.blackfire_client_token}}
     volumes: *volumes
