--- a/images/php-fpm/centos7/debug/Dockerfile
+++ b/images/php-fpm/centos7/debug/Dockerfile
@@ -9,7 +9,7 @@ RUN set -eux \
   && yum install -y php-pecl-xdebug \
   && yum clean all && rm -rf /var/cache/yum
 
-COPY debug/etc/*.ini.template /etc
-COPY debug/etc/php.d/xdebug.ini.template /etc/php.d
+COPY debug/etc/*.ini.template /etc/
+COPY debug/etc/php.d/xdebug.ini.template /etc/php.d/
 
 USER www-data
