fix opcache priority

--- a/images/php-fpm/context/etc/php.d/opcache.ini.template
+++ b/images/php-fpm/context/etc/php.d/opcache.ini.template
@@ -1,4 +1,5 @@
 ; Enable opcache extension module
+; priority=10
 zend_extension=opcache.so
 
 opcache.enable = {{ getenv "PHP_OPCACHE_ENABLE" "On" }}
