fix: blackfire: enable for shopware+wordpress, add blackfire cli to php-fpm containers

--- a/images/php-fpm/centos7/wordpress/blackfire/Dockerfile
+++ b/images/php-fpm/centos7/wordpress/blackfire/Dockerfile
@@ -1,6 +1,6 @@
 ARG IMAGE_NAME="rewardenv/php-fpm"
 ARG PHP_VERSION
-FROM ${IMAGE_NAME}:${PHP_VERSION}-magento1
+FROM ${IMAGE_NAME}:${PHP_VERSION}-wordpress
 USER root
 
 RUN set -eux \
