--- a/images/php-fpm/debian/shopware/blackfire/Dockerfile
+++ b/images/php-fpm/debian/shopware/blackfire/Dockerfile
@@ -1,7 +1,7 @@
 ARG IMAGE_NAME="rewardenv/php-fpm"
 ARG IMAGE_BASE="debian"
 ARG PHP_VERSION
-FROM ${IMAGE_NAME}:${PHP_VERSION}-magento2-${IMAGE_BASE}
+FROM ${IMAGE_NAME}:${PHP_VERSION}-shopware-${IMAGE_BASE}
 
 ARG PHP_VERSION
 
