--- a/images/php-fpm/centos7/magento2/blackfire/Dockerfile
+++ b/images/php-fpm/centos7/magento2/blackfire/Dockerfile
@@ -7,7 +7,11 @@ RUN set -eux \
   && yum install -y pygpgme \
   && curl -fsSLo- "http://packages.blackfire.io/fedora/blackfire.repo" | sudo tee /etc/yum.repos.d/blackfire.repo \
   && yum install -y blackfire-php \
-  && yum clean all && rm -rf /var/cache/yum
+  && yum clean all && rm -rf /var/cache/yum \
+  && mkdir -p /tmp/blackfire \
+  && curl -fsSLo- https://blackfire.io/api/v1/releases/client/linux_static/amd64 | tar zxp -C /tmp/blackfire \
+  && mv /tmp/blackfire/blackfire /usr/bin/blackfire \
+  && rm -rf /tmp/blackfire
 
 COPY blackfire/etc/php.d/*.ini.template /etc/php.d/
 
