fix: remove / from nginx mount ending

--- a/templates/environments/includes/nginx.base.yml
+++ b/templates/environments/includes/nginx.base.yml
@@ -1,5 +1,5 @@
 version: "3.5"
-{{if not (isEnabledStrict .reward_single_web_container)}}
+  {{if not (isEnabledStrict .reward_single_web_container)}}
 services:
   nginx:
     hostname: "{{.reward_env_name}}-nginx"
@@ -11,11 +11,11 @@ services:
       - traefik.http.routers.{{.reward_env_name}}-nginx.tls=true
       - traefik.http.routers.{{.reward_env_name}}-nginx.priority=2
       - traefik.http.routers.{{.reward_env_name}}-nginx.rule=
-          HostRegexp(`{subdomain:.+}.{{.traefik_domain}}`) || Host(`{{.traefik_domain}}`)
+        HostRegexp(`{subdomain:.+}.{{.traefik_domain}}`) || Host(`{{.traefik_domain}}`)
       - traefik.http.services.{{.reward_env_name}}-nginx.loadbalancer.server.port=80
     volumes:
       - .{{default "" .reward_web_root}}/:/var/www/html:cached
-      - ./{{default ".reward/nginx" .nginx_custom_configs_path}}:/etc/nginx/snippets/
+      - ./{{default ".reward/nginx" .nginx_custom_configs_path}}:/etc/nginx/snippets
     environment:
       - XDEBUG_CONNECT_BACK_HOST=${XDEBUG_CONNECT_BACK_HOST:-''}
-{{end}}
+  {{end}}
