--- a/templates/environments/includes/varnish.base.yml
+++ b/templates/environments/includes/varnish.base.yml
@@ -1,3 +1,4 @@
+{{- /* @formatter:off */ -}}
 version: "3.5"
 services:
 {{if not (eq "pwa-studio" .reward_env_type)}}
@@ -44,3 +45,5 @@ services:
       - traefik.http.routers.{{.reward_env_name}}-varnish.rule=
           HostRegexp(`{subdomain:.+}.{{.traefik_domain}}`) || Host(`{{.traefik_domain}}`)
       - traefik.http.services.{{.reward_env_name}}-varnish.loadbalancer.server.port=80
+      - dev.reward.container.name=varnish
+      - dev.reward.environment.name={{.reward_env_name}}
