--- a/templates/_services/docker-compose.yml
+++ b/templates/_services/docker-compose.yml
@@ -1,3 +1,4 @@
+{{- /* @formatter:off */ -}}
 version: "3.5"
 services:
   traefik:
@@ -16,6 +17,8 @@ services:
       - traefik.http.routers.traefik.tls=true
       - traefik.http.routers.traefik.rule=Host(`traefik.{{default "reward.test" .reward_service_domain}}`)
       - traefik.http.routers.traefik.service=api@internal
+      - dev.reward.container.name=traefik
+      - dev.reward.environment.name=reward
     restart: {{default "always" .reward_restart_policy}}
 
 {{if isEnabledPermissive .reward_portainer}}
@@ -30,6 +33,8 @@ services:
       - traefik.http.routers.portainer.tls=true
       - traefik.http.routers.portainer.rule=Host(`portainer.{{default "reward.test" .reward_service_domain}}`)
       - traefik.http.services.portainer.loadbalancer.server.port=9000
+      - dev.reward.container.name=portainer
+      - dev.reward.environment.name=reward
     restart: {{default "always" .reward_restart_policy}}
 {{end}}
 
@@ -68,6 +73,8 @@ services:
       - traefik.http.routers.dnsmasq.tls=true
       - traefik.http.routers.dnsmasq.rule=Host(`dnsmasq.{{default "reward.test" .reward_service_domain}}`)
       - traefik.http.services.dnsmasq.loadbalancer.server.port=8080
+      - dev.reward.container.name=dnsmasq
+      - dev.reward.environment.name=reward
     restart: {{default "always" .reward_restart_policy}}
 {{end}}
 
@@ -80,6 +87,8 @@ services:
       - traefik.http.routers.mailhog.tls=true
       - traefik.http.routers.mailhog.rule=Host(`mailhog.{{default "reward.test" .reward_service_domain}}`)
       - traefik.http.services.mailhog.loadbalancer.server.port=8025
+      - dev.reward.container.name=mailhog
+      - dev.reward.environment.name=reward
     restart: {{default "always" .reward_restart_policy}}
 {{end}}
 
@@ -93,7 +102,10 @@ services:
       - traefik.enable=true
       - traefik.http.routers.phpmyadmin.tls=true
       - traefik.http.routers.phpmyadmin.rule=Host(`phpmyadmin.{{default "reward.test" .reward_service_domain}}`)
+      - traefik.http.routers.phpmyadmin.rule=Host(`pma.{{default "reward.test" .reward_service_domain}}`)
       - traefik.http.services.phpmyadmin.loadbalancer.server.port=80
+      - dev.reward.container.name=phpmyadmin
+      - dev.reward.environment.name=reward
     restart: {{default "always" .reward_restart_policy}}
     volumes:
       - /sessions
@@ -108,6 +120,8 @@ services:
       - traefik.http.routers.adminer.tls=true
       - traefik.http.routers.adminer.rule=Host(`adminer.{{default "reward.test" .reward_service_domain}}`)
       - traefik.http.services.adminer.loadbalancer.server.port=8080
+      - dev.reward.container.name=adminer
+      - dev.reward.environment.name=reward
     restart: {{default "always" .reward_restart_policy}}
 {{end}}
 
@@ -120,6 +134,8 @@ services:
       - traefik.http.routers.elastichq.tls=true
       - traefik.http.routers.elastichq.rule=Host(`elastichq.{{default "reward.test" .reward_service_domain}}`)
       - traefik.http.services.elastichq.loadbalancer.server.port=5000
+      - dev.reward.container.name=elastichq
+      - dev.reward.environment.name=reward
     restart: {{default "always" .reward_restart_policy}}
 {{end}}
 
@@ -127,6 +143,9 @@ services:
   tunnel:
     container_name: tunnel
     image: panubo/sshd:1.1.0
+    labels:
+      - dev.reward.container.name=tunnel
+      - dev.reward.environment.name=reward
     ports:
       - "127.0.0.1:2222:22"
     volumes:
