--- a/templates/environments/includes/nginx.base.yml
+++ b/templates/environments/includes/nginx.base.yml
@@ -1,3 +1,4 @@
+{{- /* @formatter:off */ -}}
 version: "3.5"
   {{if not (isEnabledStrict .reward_single_web_container)}}
 services:
@@ -13,6 +14,8 @@ services:
       - traefik.http.routers.{{.reward_env_name}}-nginx.rule=
         HostRegexp(`{subdomain:.+}.{{.traefik_domain}}`) || Host(`{{.traefik_domain}}`)
       - traefik.http.services.{{.reward_env_name}}-nginx.loadbalancer.server.port=80
+      - dev.reward.container.name=nginx
+      - dev.reward.environment.name={{.reward_env_name}}
     volumes:
       - .{{default "" .reward_web_root}}/:/var/www/html:cached
       - ./{{default ".reward/nginx" .nginx_custom_configs_path}}:/etc/nginx/snippets
