--- a/templates/environments/includes/node.base.yml
+++ b/templates/environments/includes/node.base.yml
@@ -1,3 +1,4 @@
+{{- /* @formatter:off */ -}}
 x-extra_hosts: &extra_hosts
   - {{.traefik_domain}}:{{default "0.0.0.0" .traefik_address}}
   - {{default "app" .traefik_subdomain}}.{{.traefik_domain}}:{{default "0.0.0.0" .traefik_address}}
@@ -22,6 +23,8 @@ services:
       - traefik.http.routers.{{.reward_env_name}}-node.rule=
           HostRegexp(`{subdomain:.+}.{{.traefik_domain}}`) || Host(`{{.traefik_domain}}`)
       - traefik.http.services.{{.reward_env_name}}-node.loadbalancer.server.port=8000
+      - dev.reward.container.name=node
+      - dev.reward.environment.name={{.reward_env_name}}
     volumes:
       - {{.reward_ssh_dir}}:/home/node/.ssh:cached
       - .{{default "" .reward_web_root}}/:/usr/src/app:cached
