--- a/templates/environments/includes/php-fpm.base.yml
+++ b/templates/environments/includes/php-fpm.base.yml
@@ -47,6 +47,8 @@ services:
       - traefik.http.routers.{{.reward_env_name}}-php-fpm.rule=
         HostRegexp(`{subdomain:.+}.{{.traefik_domain}}`) || Host(`{{.traefik_domain}}`)
       - traefik.http.services.{{.reward_env_name}}-php-fpm.loadbalancer.server.port=80
+      - dev.reward.container.name=php-fpm
+      - dev.reward.environment.name={{.reward_env_name}}
 {{end}}
     volumes: *volumes
     extra_hosts: *extra_hosts
@@ -54,6 +56,9 @@ services:
   php-debug:
     hostname: "{{.reward_env_name}}-php-debug"
     image: {{default "docker.io/rewardenv" .reward_docker_image_repo}}/php-fpm:{{default "7.4" .php_version}}{{default "" .reward_svc_php_debug_variant}}-debug{{if (default "" .reward_docker_image_base)}}-{{.reward_docker_image_base}}{{end}}
+    labels:
+      - dev.reward.container.name=php-debug
+      - dev.reward.environment.name={{.reward_env_name}}
     env_file:
       - .env
     environment:
