--- a/templates/environments/includes/rabbitmq.base.yml
+++ b/templates/environments/includes/rabbitmq.base.yml
@@ -1,3 +1,4 @@
+{{- /* @formatter:off */ -}}
 version: "3.5"
 services:
   rabbitmq:
@@ -8,6 +9,8 @@ services:
       - traefik.http.routers.{{.reward_env_name}}-rabbitmq.tls=true
       - traefik.http.routers.{{.reward_env_name}}-rabbitmq.rule=Host(`rabbitmq.{{.traefik_domain}}`)
       - traefik.http.services.{{.reward_env_name}}-rabbitmq.loadbalancer.server.port=15672
+      - dev.reward.container.name=rabbitmq
+      - dev.reward.environment.name={{.reward_env_name}}
     volumes:
       - rabbitmq:/var/lib/rabbitmq
 
