--- a/templates/environments/includes/redis.base.yml
+++ b/templates/environments/includes/redis.base.yml
@@ -1,8 +1,12 @@
+{{- /* @formatter:off */ -}}
 version: "3.5"
 services:
   redis:
     hostname: "{{.reward_env_name}}-redis"
     image: {{default "docker.io/rewardenv" .reward_docker_image_repo}}/redis:{{default "6.0" .redis_version}}
+    labels:
+      - dev.reward.container.name=redis
+      - dev.reward.environment.name={{.reward_env_name}}
     volumes:
       - redis:/data
 
