--- a/templates/environments/magento2/magento2.magepack.base.yml
+++ b/templates/environments/magento2/magento2.magepack.base.yml
@@ -1,8 +1,12 @@
+{{- /* @formatter:off */ -}}
 version: "3.5"
 services:
   magepack:
     hostname: "{{.reward_env_name}}-magepack"
     image: {{default "docker.io/rewardenv" .reward_docker_image_repo}}/magepack:{{default "2.3" .magepack_version}}
+    labels:
+      - dev.reward.container.name=magepack
+      - dev.reward.environment.name={{.reward_env_name}}
     environment:
       - TRAEFIK_DOMAIN
       - TRAEFIK_SUBDOMAIN
