--- a/templates/environments/magento2/magento2.splitdb.checkout.base.yml
+++ b/templates/environments/magento2/magento2.splitdb.checkout.base.yml
@@ -1,3 +1,4 @@
+{{- /* @formatter:off */ -}}
 version: '3.5'
 services:
   php-fpm:
@@ -11,6 +12,9 @@ services:
   checkoutdb:
     hostname: "{{.reward_env_name}}-checkoutdb"
     image: {{default "docker.io/rewardenv" .reward_docker_image_repo}}/mariadb:{{default "10.4" .mariadb_version}}
+    labels:
+      - dev.reward.container.name=checkoutdb
+      - dev.reward.environment.name={{.reward_env_name}}
     environment:
       - MYSQL_ROOT_PASSWORD={{default "magento" .mysql_root_password}}
       - MYSQL_DATABASE={{default "magento" .mysql_database}}
