--- a/templates/environments/magento2/magento2.tests.base.yml
+++ b/templates/environments/magento2/magento2.tests.base.yml
@@ -1,8 +1,12 @@
+{{- /* @formatter:off */ -}}
 version: "3.5"
 services:
   tmp-mysql:
     hostname: "{{.reward_env_name}}-mysql"
     image: {{default "docker.io/rewardenv" .reward_docker_image_repo}}/mysql:5.7
+    labels:
+      - dev.reward.container.name=tmp-mysql
+      - dev.reward.environment.name={{.reward_env_name}}
     environment:
       - MYSQL_ROOT_PASSWORD={{default "magento" .mysql_root_password}}
       - MYSQL_DATABASE=magento_integration_tests
