feat: search containers with labels instead of names

--- a/templates/environments/magento2/magento2.base.yml
+++ b/templates/environments/magento2/magento2.base.yml
@@ -18,6 +18,8 @@ services:
             && (Path(`/livereload.js`) || Path(`/livereload`))
       - traefik.http.routers.{{.reward_env_name}}-livereload.service={{.reward_env_name}}-livereload
       - traefik.http.services.{{.reward_env_name}}-livereload.loadbalancer.server.port=35729
+      - dev.reward.container.name=php-fpm
+      - dev.reward.environment.name={{.reward_env_name}}
     environment:
       - MAGE_DEBUG_SHOW_ARGS=1
 {{if (isEnabledStrict .reward_single_web_container)}}
