fix: typo in elasticsearch container name

--- a/templates/environments/includes/elasticsearch.base.yml
+++ b/templates/environments/includes/elasticsearch.base.yml
@@ -9,7 +9,7 @@ services:
       - traefik.http.routers.{{.reward_env_name}}-elasticsearch.tls=true
       - traefik.http.routers.{{.reward_env_name}}-elasticsearch.rule=Host(`elasticsearch.{{.traefik_domain}}`)
       - traefik.http.services.{{.reward_env_name}}-elasticsearch.loadbalancer.server.port=9200
-      - dev.reward.container.name=db
+      - dev.reward.container.name=elasticsearch
       - dev.reward.environment.name={{.reward_env_name}}
     environment:
       - discovery.type=single-node
