--- a/templates/_services/docker-compose.yml
+++ b/templates/_services/docker-compose.yml
@@ -85,7 +85,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.mailhog.tls=true
-      - traefik.http.routers.mailhog.rule=Host(`mailhog.{{default "reward.test" .reward_service_domain}}`)
+      - traefik.http.routers.mailhog.rule=Host(`mailhog.{{default "reward.test" .reward_service_domain}}`,`mh.{{default "reward.test" .reward_service_domain}}`)
       - traefik.http.services.mailhog.loadbalancer.server.port=8025
       - dev.reward.container.name=mailhog
       - dev.reward.environment.name=reward
@@ -102,8 +102,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.phpmyadmin.tls=true
-      - traefik.http.routers.phpmyadmin.rule=Host(`phpmyadmin.{{default "reward.test" .reward_service_domain}}`)
-      - traefik.http.routers.phpmyadmin.rule=Host(`pma.{{default "reward.test" .reward_service_domain}}`)
+      - traefik.http.routers.phpmyadmin.rule=Host(`phpmyadmin.{{default "reward.test" .reward_service_domain}}`,`pma.{{default "reward.test" .reward_service_domain}}`)
       - traefik.http.services.phpmyadmin.loadbalancer.server.port=80
       - dev.reward.container.name=phpmyadmin
       - dev.reward.environment.name=reward
