fix: update code formatter sign, go shouldn't remove trailing spaces in yml templates

--- a/templates/environments/includes/blackfire.darwin.yml
+++ b/templates/environments/includes/blackfire.darwin.yml
@@ -1,7 +1,7 @@
-{{- /* @formatter:off */ -}}
+{{- /* @formatter:off */}}
+
 version: "3.5"
 services:
   php-blackfire:
     volumes:
       - /run/host-services/ssh-auth.sock:/run/host-services/ssh-auth.sock
-
