--- a/templates/environments/magento2/magento2.base.yml
+++ b/templates/environments/magento2/magento2.base.yml
@@ -1,4 +1,5 @@
-{{- /* @formatter:off */ -}}
+{{- /* @formatter:off */}}
+
 version: "3.5"
 services:
 {{if not (isEnabledStrict .reward_single_web_container)}}
