--- a/templates/environments/includes/nginx.base.yml
+++ b/templates/environments/includes/nginx.base.yml
@@ -1,4 +1,5 @@
-{{- /* @formatter:off */ -}}
+{{- /* @formatter:off */}}
+
 version: "3.5"
   {{if not (isEnabledStrict .reward_single_web_container)}}
 services:
