--- a/templates/environments/includes/varnish.base.yml
+++ b/templates/environments/includes/varnish.base.yml
@@ -1,4 +1,5 @@
-{{- /* @formatter:off */ -}}
+{{- /* @formatter:off */}}
+
 version: "3.5"
 services:
 {{if not (eq "pwa-studio" .reward_env_type)}}
